# RiWindow

./: .gitignore  README.md  meson.build
src/RiWindow/: platform.hpp  window.cpp  window.hpp
src/RiWindow/platform/: Win32.hpp  X11.hpp  defines.hpp
subprojects/: RiUtil.wrap  magic_enum.wrap  rxcpp.wrap
tasks/: run.sh
tests/: window_test.cpp
